<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Producto App</string>
    <string name="wellcome">Bienvenido</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_activity">Add_activity</string>
    <string name="product">Producto</string>
    <string name="price">Precio</string>
    <string name="quantity">Cantidad</string>
    <string name="save">Guardar</string>
    <string name="back">Volver</string>
    <string name="add">Agregar</string>
    <string name="list">Listar</string>
    <string name="titleProduct">Inserte un Producto</string>
    <string name="action_version">Ver version</string>
    <string name="title_activity_list_product">ListProduct</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_datos">datos</string>

</resources>
