<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.educacionit.myapplication.Add_activity">

    <RelativeLayout
        android:id="@+id/product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/width_label"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:id="@+id/productLabel"
            android:layout_alignParentLeft="true"
             />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productText"
            android:layout_toRightOf="@id/productLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/productLabel" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/price"
        android:layout_below="@id/product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/width_label"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/priceLabel"
            android:layout_alignParentLeft="true"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceText"
            android:layout_toRightOf="@id/priceLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/priceLabel" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quantity"
        android:layout_below="@id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/width_label"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:id="@+id/quantityLabel"
            android:layout_alignParentLeft="true"
                                                 />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quantityProduct"
            android:layout_toRightOf="@id/quantityLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/quantityLabel" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btn_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"

  />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btn_back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"

        />

</RelativeLayout>
